Add implementation for jwt authenticationfilter

--- a/common/src/main/resources/application-dev.yml
+++ b/common/src/main/resources/application-dev.yml
@@ -14,4 +14,4 @@ jwt:
   tokenPrefix: Bearer
   header: Authorization
   key: q3t6w9z$C&F)J@NcQfTjWnZr4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeTh
-  expiresAfter: 1800
+  expiresAfter: 180000000
