--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>common</module>
         <module>gateway</module>
+        <module>statistics</module>
         <module>registration</module>
     </modules>
 
