--- a/docker-variable.env
+++ b/docker-variable.env
@@ -5,3 +5,5 @@ RABBIT_PASSWORD=guest
 DB_URL=jdbc:postgresql://db:5432/pl-db
 DB_USER=postgres
 DB_PASS=postgres
+JWT_KEY=!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThq3t6w9z$C&F)J@NcQfTjW
+STATISTICS_URL=http://statistics:8080
