--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,20 @@ services:
     container_name: pl-registration-container
     build:
       context: .
-      dockerfile: Dockerfile-statistics
+      dockerfile: Dockerfile-registration
     ports:
       - '8082:8080'
     env_file:
       - docker-variable.env
-
+  gateway:
+    container_name: pl-gateway-container
+    build:
+      context: .
+      dockerfile: Dockerfile-gateway
+    ports:
+      - '8081:8080'
+    env_file:
+      - docker-variable.env
 
 
 
