--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -85,7 +85,9 @@
 		</dependencies>
 	</dependencyManagement>
 
+
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
