--- a/common/src/main/resources/application-dev.yml
+++ b/common/src/main/resources/application-dev.yml
@@ -36,3 +36,9 @@ springdoc:
   api-docs:
     path: /v3/api-docs
     enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics
