--- a/docker-variable.env
+++ b/docker-variable.env
@@ -7,3 +7,5 @@ DB_USER=postgres
 DB_PASS=postgres
 JWT_KEY=!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThq3t6w9z$C&F)J@NcQfTjW
 STATISTICS_URL=http://statistics:8080
+REDIS_HOST=redis
+REDIS_PORT=6379
