--- a/common/src/main/resources/application-dev.yml
+++ b/common/src/main/resources/application-dev.yml
@@ -13,6 +13,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
       hibernate.ddl-auto: validate
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 
 jwt:
