--- a/common/src/main/resources/application-prod.yml
+++ b/common/src/main/resources/application-prod.yml
@@ -13,7 +13,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
       hibernate.ddl-auto: validate
-
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
 
 jwt:
   tokenPrefix: Bearer
