Add new rabbitmq queue for publishing new successful battery registration event

--- a/common/src/main/resources/application-prod.yml
+++ b/common/src/main/resources/application-prod.yml
@@ -26,6 +26,7 @@ jwt:
 
 queue:
   battery-registration: q.battery-registration
+  battery-registration-complete : q.battery-registration-complete
 
 statistics:
   url: ${STATISTICS_URL}/statistics/api
