--- a/common/src/main/resources/application-dev.yml
+++ b/common/src/main/resources/application-dev.yml
@@ -27,6 +27,7 @@ jwt:
 
 queue:
   battery-registration: q.battery-registration
+  battery-registration-complete : q.battery-registration-complete
 
 statistics:
   url: http://localhost:8082/statistics/api
