--- a/docker-variable.env
+++ b/docker-variable.env
@@ -9,3 +9,4 @@ JWT_KEY=!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThq3t6w9z$C&F)J@NcQfTjW
 STATISTICS_URL=http://statistics:8080
 REDIS_HOST=redis
 REDIS_PORT=6379
+LOG_PATH=/tmp/logs
